2005-09-29 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.3.

2005-09-27  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/hikidoc.rb: sync with hikidoc rev.29.
	  bugfix in parse_plugin.
	  revise URI_RE.

2005-09-26 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: remove index parameter from Plugin#subtitle_proc.
	* style/*_style.rb: revise subtitle_proc.

2005-09-26  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/hikidoc.rb: sync with hikidoc rev.27.
	  revise parse_plugin.

2005-09-25 ds14050 at vvvvvv.sakura.ne.jp
	* tdiary/wiki_style.rb: enable @options['kw.show_inter'].

2005-09-22  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/wiki_style.rb (do_html4): support diaries without
	subtitles.

2005-09-18 zunda <zunda at freeshell.org>
	* plugin/*/10spamfilter.rb: fixed the form always showing comments will be discarded

2005-09-17  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/hikidoc.rb: sync with hikidoc rev.25.
	  minimum match in parse_modifier.
	  revise parse_list.
	  move parse_comment next to parse_pre.

2005-09-17 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/wiki_style.rb: unescape target URI in link format.

2005-09-16 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: prev/next navigation on edit mode.
	* tdiary/wiki_style.rb: unescape target URI to own diary.
	* tdiary.rb, skel/conf.rhtml, theme/conf.css: set invertion color to
	current preference item in sidebar.

2005-09-12 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/filter/spam.rb: fix debug message in referer_filter.

2005-09-09 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: insert thumbnail of selected theme.

2005-09-08 TADA Tadashi <sho@spc.gr.jp>
	* theme/conf.css: a little change about design of list.
	* tdiary.conf, plugin/00default.rb, skel/tdiary.rconf: add @conf.banner
	and update genre.

2005-09-07 TADA Tadashi <sho@spc.gr.jp>
	* plugin/*.rb: a little adjustment design in English.
	* plugin/00default.rb: not generate link for absent month.

2005-09-06 YAMAGUCHI Seiji <valda at suicidalmachineers.com>