@@ -30,7 +30,7 @@
 require 'uri'
 
 class HikiDoc < String
-  Revision = %q$Rev: 29 $
+  Revision = %q$Rev: 33 $
 
   def initialize( content = '', options = {} )
     @level = options[:level] || 1
@@ -87,7 +87,7 @@ class HikiDoc < String
 
   PLUGIN_OPEN = '{{'
   PLUGIN_CLOSE = '}}'
-  PLUGIN_SPLIT_RE = /(#{Regexp.quote(PLUGIN_OPEN)}|#{Regexp.quote(PLUGIN_CLOSE)})/
+  PLUGIN_SPLIT_RE = /(#{Regexp.union( PLUGIN_OPEN, PLUGIN_CLOSE )})/
 
   def parse_plugin( text )
     ret = ''
@@ -221,7 +221,7 @@ class HikiDoc < String
   ######################################################################
   # definition
 
-  DEFINITION_RE = /^:(.*?)?:(.+)\n?/
+  DEFINITION_RE = /^:(.*?)?:(.*)\n?/
   DEFINITIONS_RE = /(#{DEFINITION_RE})+/
 
   def parse_definition( text )
@@ -234,6 +234,8 @@ class HikiDoc < String
       str.scan( DEFINITION_RE ) do |t, d|
         if t.empty?
           ret << "<dd>%s</dd>\n" % d
+        elsif d.empty?
+          ret << "<dt>%s</dt>\n" % t
         else
           ret << "<dt>%s</dt><dd>%s</dd>\n" % [ t, d ]
         end
@@ -334,7 +336,6 @@ class HikiDoc < String
   BRACKET_LINK_RE = /\[\[(.+?)\]\]/
   NAMED_LINK_RE = /(.+?)\|(.+)/
   URI_RE = /(?:(?:https?|ftp|file):\/\/|mailto:)[A-Za-z0-9;\/?:@&=+$,\-_.!~*\'()#%]+/
-  URI_ONLY_RE = %r!\A#{URI_RE}\z!
 
   def parse_link( text )
     ret = text
@@ -346,11 +347,7 @@ class HikiDoc < String
       else
         uri = title = link
       end
-      if URI_ONLY_RE =~ uri
-        store_block( %Q|<a href="#{uri}">#{title}</a>| )
-      else
-        store_block( %Q|<a href="#{escape_uri( unescape_html( uri ) )}">#{title}</a>| )
-      end
+      store_block( %Q|<a href="#{escape_quote( uri )}">#{title}</a>| )
     end
     ret.gsub!( URI_RE ) do |uri|
       if IMAGE_RE =~ uri
@@ -398,17 +395,8 @@ class HikiDoc < String
       gsub( />/, '&gt;' )
   end
 
-  def unescape_html( text )
-    text.gsub( /&gt;/, '>' ).
-      gsub( /&lt;/, '<' ).
-      gsub( /&amp;/, '&' )
-  end
-
-  def escape_uri( text )
-    return text unless /[^ a-zA-Z0-9_.%-]/ =~ text
-    text.gsub( /([^ a-zA-Z0-9_.-]+)/n ) do
-      '%' + $1.unpack( 'H2' * $1.size ).join( '%' ).upcase
-    end.tr(' ', '+')
+  def escape_quote( text )
+    text.gsub( /"/, '&quot;' )
   end
 
   def store_block( text )
