@@ -1,3 +1,9 @@
+2005-10-02  Kazuhiko  <kazuhiko@fdiary.net>
+	* tdiary/hikidoc.rb: sync with hikidoc rev.33.
+	  revise esacpes in parse_link
+	  allow empty descriptions in definition lists
+	* tdiary/wiki_style.rb (to_html): replace links to my/kw plugins.
+
 2005-09-29 TADA Tadashi <sho@spc.gr.jp>
 	* release 2.1.3.
 
